# ETL-newsletter

./: .gitignore  README.md  __main__.py  config.py  pyproject.toml  requirements.txt
assets/: header.md
buttondown/: main.py
feeds/: blogs.py  feed_fetcher.py
github/: main.py
helpers/: dates.py
notebooks/: feedparser.ipynb  scraper.ipynb  scraper.py
notebooks/.ipynb_checkpoints/: feedparser-checkpoint.ipynb
paperswithcode/: main.py
reddit/: helpers.py  main.py
