[tool.poetry]
name = "etl-newsletter"
version = "0.1.0"
description = "an etl pipeline in airflow to automate a newsletter"
authors = ["Pedro Madruga"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
